public/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Permanent+Marker&display=swap');



  body {
  margin: 0;
  padding: 0;

  /*background-image: url('/assets/background-images.png');*/

  background-size: cover;
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.content {
  flex: 1;
  display: flex;
  flex-direction: column;
}
.textBox {
  height: 30px;
  font-size: 14pt;
}
.link {
  height: 50px;
  font-size: 20px;
  color: #000000;
}
.button {
  height: 35px;
  font-size: 14pt;
}
#loginForm {

  font-size: 35px;
  font-family: 'Oleo Script', cursive;
  text-align: center;
}
#signUpForm {

  font-size: 30px;
  font-family: 'Oleo Script', cursive;
  text-align: center;
}


h1 {
  font-size: 80px;
  text-align: center;
  font-family: 'Oleo Script', cursive;
  color: white;
  margin: 0;
  padding: 10px;
}

h2 {
  font-size: 30px;
  color: white;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  text-align: center;
}

h4 {
  font-size: 25px;
  text-align: center;
  font-family: 'Permanent Marker', cursive;
  color: rgba(255, 247, 0, 0.899);
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
  margin-bottom: 20px;
}

h6 {
  font-size: 100px;
  text-align: center;
  font-family: 'Permanent Marker', cursive;
  color: rgba(255, 247, 0, 0.899);
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
  margin-top: 70px;
}


header {
  color: white;
  text-align: center;
  padding: 15px;
  font-size: large;
}


nav {
  flex-direction: column; /* Stack items vertically */
    text-align: center;
}

nav button {
  margin: auto;
  padding: 10px 20px;
  font-size: 40px;
  font-weight: bolder;
  font-family: Oleo Script;
  background-color: transparent;
  border-color: transparent;
  border-radius: 15px;
  cursor: pointer;
  position: sticky;
  top: 65%; /* Position at the vertical center */
  left: 50%; /* Position at the horizontal center */
  transform: translate(-50%, -50%); /* Adjust for center alignment */
  color: #e24d07;
  text-decoration: none;
}

nav button:hover {
  text-decoration: none;
}

main {
  flex-grow: 1;
}

.starting-budget {
  font-size: 25px;
  text-align: center;
  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  color: black;
  margin-bottom: 100px;

}
#budget_input {
display: flex;
flex-direction: column;
align-items: center;
}

/* .box {
  display: flex;
  justify-content: center;
  align-items: center;
} */

.box button{
  display: flex;
  position: relative;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
  margin-left: 48%;
  margin-bottom: 20px;
  text-decoration: none;
  padding: 20px 20px;
  border: 1px solid transparent;
  border-radius: 8px;
  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
  background-color: rgb(195, 185, 50);
  color: white;
  cursor: pointer;
  /* transition: background-color 0.3s ease-in-out; */
}


/* .card {
  position: relative;
  max-width: 400px;
  padding: 20px;
  border: 1px solid white;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  background-color: rgb(195, 185, 50);
}

.card header {
  text-align: center;
  margin-bottom: 10px;
}

.card {
  margin-bottom: 20px;
} */

h3 {
  margin: 0;
  font-size: 1.5rem;
  text-align: center;
  color: black;
}

nav a {
  color: white;
  text-decoration: none;
  padding: 10px 20px;
  font-size: 16px;
  text-align: end;
  cursor: pointer;
  position: relative;
 
}
/* nav a:hover {
  background-color: #e74c3c; */



#budget_input {
  padding: 10px;
  font-size: 16px;
  border: 1px solid #ccc;
  border-radius: 5px;
  margin-right: 10px;
  width: 150px;
}
#submit_budget {
  padding: 10px 20px;
  font-size: 16px;
  background-color: #0c3d5b;
  border: none;
  border-radius: 5px;
  color: white;
  cursor: pointer;
}
#submit_budget:hover {
  background-color: #0c3d5b;
}


table {
  border-collapse: collapse;
  margin-left: 200px;
  margin-right: 200px;
}

th {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: center;
    color: black;
    background-color: #f2f2f2;
  }

td {
  border: 1px solid #ddd;
  padding: 8px;
  text-align: center;
  color: white;
  
}

 

#logout {
  background-color: #e74c3c;
  color: white;
  padding: 10px 20px;
  font-size: 16px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  position: relative;
  top: 30px;
  

  
}

#logout:hover {
  background-color: #c0392b;
}



footer {
  background-color: #f4f4f4;
  font-size: 20px;
  padding: 20px;
  text-align: center;
  position: relative; /* Position the footer relative to the parent */
  margin-top: auto; /* Push the footer to the bottom */
}

.footer-content {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
}

